initialize repo with io content from roller

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 
 # RStudio files
 .Rproj.user/
+*.Rproj
+.Rbuildignore
 
 # produced vignettes
 vignettes/*.html
@@ -31,3 +33,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
