rank.gct and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(parse.gctx)
 export(parse.gmt)
 export(parse.gmx)
 export(parse.grp)
+export(rank.gct)
 export(read.gctx.ids)
 export(read.gctx.meta)
 export(subset.gct)
