--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: CMap tools in R
 Version: 1.0
 Date: 2017-03-29
 Author: CMap Group at The Broad Institute
-Maintainer: <clued@broadinstitute.org>
+Maintainer: <clue@broadinstitute.org>
 Description: CMAP tools in R
 License: BSD
 LazyData: true
