--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ Description: CMAP tools in R
 License: BSD
 LazyData: true
 Depends: R (>= 3.2.0),
-  methods
+  methods,
+  rhdf5,
+  data.table
 Imports:
-    rhdf5,
-    data.table
 RoxygenNote: 5.0.1
