--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Maintainer: <clue@broadinstitute.org>
 Description: CMAP tools in R
 License: BSD
 LazyData: true
-Depends: R (>= 3.2.0),
+Depends: R (>= 3.2.0)
+Imports:
   methods,
   rhdf5,
   data.table
-Imports:
 RoxygenNote: 6.0.1
