adding robust z-score

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(parse.grp)
 export(rank.gct)
 export(read.gctx.ids)
 export(read.gctx.meta)
+export(robust.zscore)
 export(subset.gct)
 export(transpose.gct)
 export(write.gct)
