--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(update,gctx)
 export(align_matrices)
 export(annotate.gct)
 export(check_colnames)
+export(distil)
 export(extract.gct)
 export(is.wholenumber)
 export(melt.gct)
@@ -18,6 +19,7 @@ export(read.gctx.ids)
 export(read.gctx.meta)
 export(robust.zscore)
 export(subset.gct)
+export(threshold)
 export(transpose.gct)
 export(write.gct)
 export(write.gctx)
