function lxb2mat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(check_colnames)
 export(distil)
 export(extract.gct)
 export(is.wholenumber)
+export(lxb2mat)
 export(melt.gct)
 export(merge.gct)
 export(na_pad_matrix)
@@ -26,3 +27,5 @@ export(write.gctx)
 export(write.gmt)
 export(write.grp)
 export(write.tbl)
+importFrom(prada,exprs)
+importFrom(prada,readFCS)
