--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(update,gctx)
 export(align_matrices)
 export(annotate.gct)
 export(check_colnames)
+export(check_dups)
 export(distil)
 export(extract.gct)
 export(is.wholenumber)
