--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     keepalive_timeout           3000;
     server {
         listen                  9080;
-        root                    /usr/share/nginx/html;
+        root                    /usr/share/nginx/html/cmapR;
         index                   index.html;
         server_name             cmapR;
         client_max_body_size    16m;
