Fixing routing to work with /cmapR

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,13 @@ http {
         index                   index.html;
         server_name             cmapR;
         client_max_body_size    16m;
+        port_in_redirect off;
+        location ~ ^/cmapR$ {
+            try_files $uri @rewrite;
+        }
+        location @rewrite {
+            return 302 $scheme://$http_host$uri/;
+        }
         location ~ ^/cmapR(?:/(.*))?$ {
        	    root /usr/share/nginx/html;
        	    access_log off;
