updating accessor methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(check_colnames)
 export(check_dups)
 export(distil)
 export(extract.gct)
+export(get_gct_ids)
+export(get_gct_matrix)
+export(get_gct_meta)
 export(is.wholenumber)
 export(lxb2mat)
 export(melt.gct)
