--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: cmapR
 Type: Package
-Title: CMap tools in R
+Title: CMap Tools in R
 Version: 0.99.0
 Date: 2018-01-30
 Author: Ted Natoli <tnatoli@broadinstitute.org>
 Maintainer: Ted Natoli <ted.e.natoli@gmail.com>
-Description: Parse, manipulate, and write common CMap data objects.
+Description: The Connectivity Map (CMap) is a massive resource of perturbational
+  gene expression profiles built by researchers at the Broad Institute and 
+  funded by the NIH Library of Integrated Network-Based Cellular Signatures
+  (LINCS) program. Please visit https://clue.io for more information.
+  The cmapR package implements methods to parse, manipulate, and write common
+  (CMap) data objects, such as annotated matrices and collections of gene sets.
 License: file LICENSE
 Depends: R (>= 3.6.0)
 Imports:
