--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,5 +31,7 @@ export(write_gctx)
 export(write_gmt)
 export(write_grp)
 export(write_tbl)
+importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(methods,validObject)
 importFrom(prada,exprs)
 importFrom(prada,readFCS)
