--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,9 @@ export(write_gmt)
 export(write_grp)
 export(write_tbl)
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(matrixStats,colAnyNAs)
+importFrom(matrixStats,colRanks)
+importFrom(matrixStats,rowRanks)
 importFrom(methods,validObject)
 importFrom(prada,exprs)
 importFrom(prada,readFCS)
