WIP adding GCT accessor methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,14 +13,14 @@ export(distil)
 export(extract.gct)
 export(extract_gct)
 export(fix.datatypes)
-export(get_gct_ids)
-export(get_gct_matrix)
-export(get_gct_meta)
+export(ids)
 export(is.wholenumber)
 export(lxb2mat)
+export(mat)
 export(melt.gct)
 export(melt_gct)
 export(merge_gct)
+export(meta)
 export(na_pad_matrix)
 export(parse.gctx)
 export(parse.gmt)
