exporting accessor functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(merge,gct)
 S3method(subset,gct)
 S3method(update,gctx)
+export("ids<-")
+export("mat<-")
+export("meta<-")
 export(GCT)
 export(align_matrices)
 export(annotate.gct)
