--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(matrixStats,colAnyNAs)
 importFrom(matrixStats,colRanks)
 importFrom(matrixStats,rowRanks)
+importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(prada,exprs)
 importFrom(prada,readFCS)
