--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,10 +56,10 @@ export(write_gmt)
 export(write_grp)
 export(write_tbl)
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(flowCore,exprs)
+importFrom(flowCore,read.FCS)
 importFrom(matrixStats,colAnyNAs)
 importFrom(matrixStats,colRanks)
 importFrom(matrixStats,rowRanks)
 importFrom(methods,new)
 importFrom(methods,validObject)
-importFrom(prada,exprs)
-importFrom(prada,readFCS)
